bindings/c/xlpp_capi.h

typedef struct xlpp_worksheet_t*   xlpp_worksheet;
typedef struct xlpp_cell_t*        xlpp_cell;
typedef struct xlpp_table_t*      xlpp_table;
typedef struct xlpp_data_validation_t* xlpp_data_validation;
typedef struct xlpp_conditional_rule_t* xlpp_conditional_rule;
typedef struct xlpp_chart_t*        xlpp_chart;
typedef struct xlpp_chart_series_t* xlpp_chart_series;
// ============================================================
// Worksheet
// ============================================================
XLPP_API const char*  xlpp_sheet_name(xlpp_worksheet ws);
XLPP_API void         xlpp_sheet_rename(xlpp_worksheet ws, const char* name);
XLPP_API xlpp_cell    xlpp_sheet_cell(xlpp_worksheet ws, const char* address);
XLPP_API xlpp_cell    xlpp_sheet_cell_rc(xlpp_worksheet ws, uint64_t row, uint64_t col);
XLPP_API int          xlpp_sheet_has_cell(xlpp_worksheet ws, const char* address);
XLPP_API void         xlpp_sheet_append_row(xlpp_worksheet ws, const char** values, int count);
XLPP_API void         xlpp_sheet_append_doubles(xlpp_worksheet ws, const double* values, int count);
XLPP_API void         xlpp_sheet_append_mixed(xlpp_worksheet ws, const char** values, const int* types, int count);
XLPP_API void         xlpp_sheet_merge_cells(xlpp_worksheet ws, const char* range);
XLPP_API void         xlpp_sheet_unmerge_cells(xlpp_worksheet ws, const char* range);
XLPP_API void         xlpp_sheet_freeze_panes(xlpp_worksheet ws, const char* cell);
XLPP_API void         xlpp_sheet_clear_freeze_panes(xlpp_worksheet ws);
XLPP_API int          xlpp_sheet_is_merged(xlpp_worksheet ws, const char* address);
XLPP_API int          xlpp_sheet_merged_range_count(xlpp_worksheet ws);
XLPP_API void         xlpp_sheet_set_print_area(xlpp_worksheet ws, const char* value);
XLPP_API const char*  xlpp_sheet_print_area(xlpp_worksheet ws);
XLPP_API uint64_t     xlpp_sheet_max_row(xlpp_worksheet ws);
XLPP_API uint64_t     xlpp_sheet_max_col(xlpp_worksheet ws);
XLPP_API void         xlpp_sheet_dimensions(xlpp_worksheet ws, char* out, int outSize);
XLPP_API void         xlpp_sheet_insert_rows(xlpp_worksheet ws, uint64_t index, uint64_t amount);
XLPP_API void         xlpp_sheet_delete_rows(xlpp_worksheet ws, uint64_t index, uint64_t amount);
XLPP_API void         xlpp_sheet_insert_cols(xlpp_worksheet ws, uint64_t index, uint64_t amount);
XLPP_API void         xlpp_sheet_delete_cols(xlpp_worksheet ws, uint64_t index, uint64_t amount);
XLPP_API int           xlpp_sheet_frozen_pane(xlpp_worksheet ws, char* out, int outSize);
XLPP_API int           xlpp_sheet_merged_range(xlpp_worksheet ws, int index, char* out, int outSize);
XLPP_API xlpp_table    xlpp_sheet_add_table(xlpp_worksheet ws, const char* name, const char* reference);
// ============================================================
// Cell
// ============================================================
XLPP_API const char*  xlpp_cell_address(xlpp_cell c);
XLPP_API uint64_t     xlpp_cell_row(xlpp_cell c);
XLPP_API uint64_t     xlpp_cell_column(xlpp_cell c);
XLPP_API int          xlpp_cell_value_type(xlpp_cell c);
XLPP_API int          xlpp_cell_get_bool(xlpp_cell c);
XLPP_API double       xlpp_cell_get_number(xlpp_cell c);
XLPP_API const char*  xlpp_cell_get_string(xlpp_cell c);
XLPP_API int          xlpp_cell_is_empty(xlpp_cell c);
XLPP_API void         xlpp_cell_set_string(xlpp_cell c, const char* v);
XLPP_API void         xlpp_cell_set_number(xlpp_cell c, double v);
XLPP_API void         xlpp_cell_set_bool(xlpp_cell c, int v);
XLPP_API const char*  xlpp_cell_get_formula(xlpp_cell c);
XLPP_API void         xlpp_cell_set_formula(xlpp_cell c, const char* f);
XLPP_API int          xlpp_cell_has_formula(xlpp_cell c);
// Table
XLPP_API const char*   xlpp_table_name(xlpp_table table);
XLPP_API const char*   xlpp_table_reference(xlpp_table table);
XLPP_API int            xlpp_table_column_count(xlpp_table table);
XLPP_API void           xlpp_table_add_column(xlpp_table table, const char* name);
XLPP_API const char*    xlpp_table_display_name(xlpp_table table);
XLPP_API void           xlpp_table_set_display_name(xlpp_table table, const char* value);
XLPP_API const char*    xlpp_table_style_name(xlpp_table table);
XLPP_API void           xlpp_table_set_style_name(xlpp_table table, const char* value);
XLPP_API int            xlpp_table_show_row_stripes(xlpp_table table);
XLPP_API void           xlpp_table_set_show_row_stripes(xlpp_table table, int value);
// Data validation
XLPP_API xlpp_data_validation xlpp_sheet_add_list_validation(xlpp_worksheet ws, const char* reference, const char* formula);
XLPP_API void xlpp_validation_set_allow_blank(xlpp_data_validation validation, int value);
XLPP_API void xlpp_validation_set_prompt(xlpp_data_validation validation, const char* title, const char* text);
XLPP_API void xlpp_validation_set_error(xlpp_data_validation validation, const char* title, const char* text);
// Conditional formatting
XLPP_API xlpp_conditional_rule xlpp_sheet_add_formula_rule(xlpp_worksheet ws, const char* reference, const char* formula);
XLPP_API xlpp_conditional_rule xlpp_sheet_add_data_bar_rule(xlpp_worksheet ws, const char* reference, const char* color);
XLPP_API void xlpp_conditional_rule_set_priority(xlpp_conditional_rule rule, uint64_t priority);
XLPP_API void xlpp_conditional_rule_set_stop_if_true(xlpp_conditional_rule rule, int value);
XLPP_API void xlpp_conditional_rule_set_font_color(xlpp_conditional_rule rule, const char* argb);
XLPP_API void xlpp_conditional_rule_set_fill_color(xlpp_conditional_rule rule, const char* argb);
XLPP_API xlpp_chart xlpp_chart_create(int type);
XLPP_API void xlpp_chart_destroy(xlpp_chart chart);
XLPP_API void xlpp_chart_set_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_x_axis_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_y_axis_title(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_set_style(xlpp_chart chart, const char* style);
XLPP_API void xlpp_chart_set_grouping(xlpp_chart chart, int grouping);
XLPP_API void xlpp_chart_set_size(xlpp_chart chart, int width, int height);
XLPP_API void xlpp_chart_set_legend(xlpp_chart chart, int show, const char* position);
XLPP_API xlpp_chart_series xlpp_chart_add_series(xlpp_chart chart, const char* title);
XLPP_API void xlpp_chart_series_set_values_reference(xlpp_chart_series series, const char* reference);
XLPP_API void xlpp_chart_series_set_categories_reference(xlpp_chart_series series, const char* reference);
XLPP_API int xlpp_sheet_add_chart(xlpp_worksheet ws, xlpp_chart chart);